<resources>
    <string name="app_name">Facebook Recipes</string>
    <string name="login_error">Can not log in %s</string>
    <string name="login_cancel_error">Log in canceled</string>
    <string name="recipemain_error">Can not get information %s</string>
    <string name="recipemain_notice_saved">Saved successfully</string>
    <string name="recipemain_menu_action_list">Recipes saved</string>
    <string name="recipemain_menu_action_main">Select recipe</string>
    <string name="recipemain_menu_action_showall">See all</string>
    <string name="recipemain_menu_action_showfavs">See favorites</string>
    <string name="global_menu_action_logout">Log out</string>
    <string name="dismiss_description">Dismiss</string>
    <string name="save_description">Save</string>
</resources>
