<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".list.view.RecipeListActivity">

    <item
        android:id="@+id/action_main"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/recipemain_menu_action_main"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_all"
        android:title="@string/recipemain_menu_action_showall"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_favs"
        android:title="@string/recipemain_menu_action_showfavs"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:title="@string/global_menu_action_logout"
        app:showAsAction="never" />

</menu>