<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.developer.fabian.facebookrecipes.main.view.RecipeMainActivity">

    <ImageView
        android:id="@+id/imgRecipe"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgRecipe">

        <ImageButton
            android:id="@+id/imgDismiss"
            android:layout_width="@dimen/recipe_main_icon"
            android:layout_height="@dimen/recipe_main_icon"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"
            android:contentDescription="@string/dismiss_description"
            android:src="@android:drawable/ic_delete"
            android:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imgKeep"
            android:layout_width="@dimen/recipe_main_icon"
            android:layout_height="@dimen/recipe_main_icon"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/save_description"
            android:src="@android:drawable/btn_star_big_on"
            android:tint="@android:color/white" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>
